@startuml ERD Sistem Manajemen Jamaah Haji

title Entity-Relationship Diagram (ERD) Sistem Manajemen Jamaah Haji

' Entitas Admin
entity "Admin" as admin {
  * id : INT (PK)
  --
  username : VARCHAR(250)
  email : VARCHAR(250)
  password : VARCHAR(250)
}

' Entitas Pengguna
entity "Pengguna" as pengguna {
  * id : INT (PK)
  --
  username : VARCHAR(250)
  email : VARCHAR(250)
  nik : VARCHAR(20)
  password : VARCHAR(250)
}

' Entitas Pembimbing Haji
entity "Pembimbing_Haji" as pembimbing {
  * id : INT (PK)
  --
  nama_lengkap : VARCHAR(100)
  nik : VARCHAR(30)
  telepon : VARCHAR(30)
  alamat : VARCHAR(255)
  email : VARCHAR(100)
  foto : VARCHAR(255)
  keterangan : TEXT
}

' Entitas Jamaah Haji (untuk tahun standar)
entity "Jamaah_Haji" as jamaah_haji {
  * id : INT (PK)
  --
  id_pembimbing : INT (FK)
  foto : VARCHAR(100)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(30)
  nama_lengkap : VARCHAR(100)
  jenis_kelamin : VARCHAR(20)
  tanggal_lahir : DATE
  alamat : VARCHAR(200)
  telepon : VARCHAR(30)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : VARCHAR(100)
  jadwal_berangkat : DATE
  status : VARCHAR(250)
  data_pulang : DATE
}

' Entitas Jamaah 2027
entity "Jamaah_2027" as jamaah_2027 {
  * id : INT (PK)
  --
  id_pembimbing : INT (FK)
  foto : VARCHAR(100)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(30)
  nama_lengkap : VARCHAR(100)
  jenis_kelamin : VARCHAR(20)
  tanggal_lahir : DATE
  alamat : VARCHAR(200)
  telepon : VARCHAR(30)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : VARCHAR(100)
  jadwal_berangkat : DATE
  status : VARCHAR(250)
  data_pulang : DATE
}

' Entitas Jamaah 2028
entity "Jamaah_2028" as jamaah_2028 {
  * id : INT (PK)
  --
  id_pembimbing : INT (FK)
  foto : VARCHAR(100)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(30)
  nama_lengkap : VARCHAR(100)
  jenis_kelamin : VARCHAR(20)
  tanggal_lahir : DATE
  alamat : VARCHAR(200)
  telepon : VARCHAR(30)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : VARCHAR(100)
  jadwal_berangkat : DATE
  status : VARCHAR(250)
  data_pulang : DATE
}

' Entitas Jamaah 2029
entity "Jamaah_2029" as jamaah_2029 {
  * id : INT (PK)
  --
  id_pembimbing : INT (FK)
  foto : VARCHAR(100)
  nik : VARCHAR(20)
  no_porsi : VARCHAR(30)
  nama_lengkap : VARCHAR(100)
  jenis_kelamin : VARCHAR(20)
  tanggal_lahir : DATE
  alamat : VARCHAR(200)
  telepon : VARCHAR(30)
  no_paspor : VARCHAR(20)
  golongan_darah : VARCHAR(5)
  penyakit_bawaan : VARCHAR(100)
  jadwal_berangkat : DATE
  status : VARCHAR(250)
  data_pulang : DATE
}

' Entitas Berita
entity "Berita" as berita {
  * id : INT (PK)
  --
  judul : VARCHAR(255)
  konten : TEXT
  tanggal_publikasi : DATE
  penulis : VARCHAR(100)
  gambar : VARCHAR(255)
}

' Relasi Pembimbing ke Jamaah
pembimbing ||--o{ jamaah_haji : "membimbing"
pembimbing ||--o{ jamaah_2027 : "membimbing"
pembimbing ||--o{ jamaah_2028 : "membimbing"
pembimbing ||--o{ jamaah_2029 : "membimbing"

' Relasi Admin mengelola
admin ||--o{ berita : "mengelola"
admin ||--o{ pembimbing : "mengelola"
admin ||--o{ jamaah_haji : "mengelola"
admin ||--o{ jamaah_2027 : "mengelola"
admin ||--o{ jamaah_2028 : "mengelola"
admin ||--o{ jamaah_2029 : "mengelola"

' Relasi Pengguna melihat
pengguna }o--|| berita : "melihat"
pengguna }o--|| pembimbing : "melihat data"

@enduml

